app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - image: gcr.io/healthappproj/health-app-client
        name: app
        ports:
        - containerPort: 80
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
status: {}
