app-service.yaml
apiVersion: v1
kind: Service
metadata:
  generateName: app
  labels:
    io.kompose.service: app
  name: app
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 80
  selector:
    io.kompose.service: app
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
