ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: health-app-ingress
  labels:
    last_updated: 1
spec:
  backend:
    serviceName: health-app-client
    servicePort: 80
